# ProfessorFinder

./: .gitignore
.devcontainer/: devcontainer.json
admit/: .env.example  .pre-commit-config.yaml  CLAUDE.md  PROBLEM_ANALYSIS.md  main.py  pyproject.toml
admit/.github/: dependabot.yml
admit/apps/api/: .env.example  Dockerfile  README.md  config.py  database.py  main.py  pyproject.toml
admit/apps/api/models/: __init__.py  responses.py
admit/apps/api/routers/: programs.py  review.py
admit/apps/api/services/: __init__.py  program_service.py  review_service.py
admit/etl/: analyzer.py  pyproject.toml  run_pilot.py
admit/etl/crawler/: crawl.py  discover.py
admit/etl/extractor/: extract.py  mock_extract.py  prompt.md
admit/etl/parser/: html_segmenter.py  pdf_reader.py
admit/etl/storage/: __init__.py  database.py
admit/etl/validator/: rules.py
admit/schemas/: pyproject.toml  requirements.py  requirements.schema.json
proffinder/: .dockerignore  Dockerfile  README.md  app.py  app_original_backup.py  app_social_psych.py  deploy.yaml  lang.py  requirements.txt
proffinder/core/: __init__.py  cache.py  config.py  csvio.py  keywords.py  models.py  scoring.py  social_psych_programs.py  universities.py
proffinder/sources/: __init__.py  complete_verified_requirements.py  enhanced_verified_requirements_2025.py  fetch_program_data.py  grants.py  nih.py  nsf.py  openalex.py  orcid.py  program_scraper.py  psychology_department_rankings.py  recruit.py  recruitment.py  ror.py  verified_requirements_2025.py
proffinder/tests/: run_tests.py  test_csv_shape.py  test_keyword_expansion.py  test_scoring.py
proffinder/util/: http.py  text.py
(+22 files in other folders)
