[project]
name = "admit-etl"
version = "0.1.0"
description = "Graduate Admissions ETL pipeline"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.25.0",
    "aiohttp>=3.9.0",
    "aiofiles>=23.2.0",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=4.9.0",
    "selectolax>=0.3.0",
    "pdfplumber>=0.10.0",
    "pymupdf>=1.23.0",
    "pydantic>=2.5.0",
    "supabase>=2.0.0",
    "openai>=1.3.0",
    "anthropic>=0.8.0",
    "tenacity>=8.2.0",
    "structlog>=23.2.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "asyncio-throttle>=1.0.2",
    "python-dateutil>=2.8.0",
]